--- a/Adarsh/template/req.html
+++ b/Adarsh/template/req.html
@@ -57,6 +57,7 @@
     <script src="https://cdn.plyr.io/3.6.9/plyr.js"></script>
 	<script>
         const controls = [
+		'autoplay',	
               'play-large',
               'rewind',
               'play', 
